--- a/index.html
+++ b/index.html
@@ -13,6 +13,53 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <div class="flex flex-col md:flex-row">
+        <!-- Shape cards container -->
+        <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <!-- Triangle card -->
+          <div class="card w-96 bg-base-100 shadow-xl shadow-zinc-900 border-zinc-600 border-[1px]">
+            <figure class="p-4">
+              <img src="assests/images/triangle.png" alt="Triangle" />
+            </figure>
+            <div class="card-body">
+              <h2 class="text-xl font-bold text-zinc-300 text-center">Triangle</h2>
+              <p class="text-center">Area = 0.5 X b X h</p>
+              <div>
+                <input
+                  id="triangle-base"
+                  class="w-24 text-base p-2 rounded-sm"
+                  type="text"
+                  placeholder="base" />
+                <span class="mr-4 ml-2">cm</span>
+                <input
+                  class="w-24 text-base p-2 rounded-sm"
+                  type="text"
+                  name=""
+                  id="triangle-height"
+                  placeholder="height" />
+                <span>cm</span>
+              </div>
+              <div>
+                <p class="text-xl">
+                  Area: <span id="triangle-area" class="text-zinc-300">0</span>
+                  <span class="text-lg">cm<sup>2</sup></span>
+                </p>
+              </div>
+              <div class="card-actions">
+                <button onclick="calculateTriangleArea()" class="btn btn-primary w-full">
+                  Calculate
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Area calculation area  -->
+        <div class="w-96 border-2 border-gray-700 rounded-md">
+          <h3>Area Calculation</h3>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
