modified the UI of triangle box a bit

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <!-- Shape cards container -->
         <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
           <!-- Triangle card -->
-          <div class="card w-96 bg-base-100 shadow-xl shadow-zinc-900 border-zinc-600 border-[1px]">
+          <div class="card bg-base-100 shadow-xl shadow-zinc-900 border-zinc-600 border-[1px]">
             <figure class="p-4">
               <img src="assests/images/triangle.png" alt="Triangle" />
             </figure>
-            <div class="card-body">
+            <div class="card-body p-4">
               <h2 class="text-xl font-bold text-zinc-300 text-center">Triangle</h2>
               <p class="text-center">Area = 0.5 X b X h</p>
               <div>
