--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
         </div>
       </div>
     </main>
+    <script src="scripts/utility.js"></script>
+    <script src="scripts/triangle.js"></script>
   </body>
 </html>
