--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
     </main>
     <script src="scripts/utility.js"></script>
     <script src="scripts/triangle.js"></script>
+    <script src="scripts/rectangle.js"></script>
   </body>
 </html>
