Make the parallelogram shape box functional
Made the parallelogram shape box functional also coded a new utility function to reset the input fields

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </div>
               <div>
                 <p class="text-base">
-                  Area: <span id="rectangle-area" class="text-zinc-300">0</span>
+                  Area: <span id="parallelogram-area" class="text-zinc-300">0</span>
                   <span class="text-lg">cm<sup>2</sup> </span>
                 </p>
               </div>
@@ -144,5 +144,6 @@
     <script src="scripts/utility.js"></script>
     <script src="scripts/triangle.js"></script>
     <script src="scripts/rectangle.js"></script>
+    <script src="scripts/parallelogram.js"></script>
   </body>
 </html>
