Add a utility function to display the calc history in the sidebar
added a utility function to display the calc history in the sidebar. Also integrated it with each functions of shapes.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="card-body p-4">
               <h2 class="text-xl font-bold text-zinc-300 text-center">Rectangle!</h2>
               <p class="text-center">Area (A) = w X l</p>
-              <div class="flex">
+              <div class="">
                 <!-- rectangle length -->
                 <input
                   type="text"
@@ -138,6 +138,14 @@
         <!-- Area calculation area  -->
         <div class="w-96 border-2 border-gray-700 rounded-md ml-2">
           <h3>Area Calculation</h3>
+          <div>
+            <ol id="calc-history" class="list-decimal list-inside" >
+              <!-- <li> 
+                Triangle - 12cm<sup>2</sup>
+                <button class="bg-purple-600 p-[4px] text-sm">Convert to m<sup>2</sup></button> 
+              </li> -->
+            </ol>
+          </div>
         </div>
       </div>
     </main>
